--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,3 +58,93 @@ func LedToggle(){
         //t.Stop(time.Millisecond)
         //t.Reset(time.Millisecond)
 }
+
+func Rs485(){
+        rs485a := &serial.Config{Name: "/dev/ttyUSB0", Baud: 9600, StopBits: 1, Parity: 'N'}
+        rs485b := &serial.Config{Name: "/dev/ttyUSB1", Baud: 9600, StopBits: 1, Parity: 'N'}
+        rs485c := &serial.Config{Name: "/dev/ttyUSB3", Baud: 9600, StopBits: 1, Parity: 'N'}
+
+        a, err := serial.OpenPort(rs485a)
+        if err != nil{
+                log.Fatal(err)
+        }
+        b, err := serial.OpenPort(rs485b)
+        if err != nil{
+                log.Fatal(err)
+        }
+        c, err := serial.OpenPort(rs485c)
+        if err != nil{
+                log.Fatal(err)
+        }
+        fmt.Println("Serial port Open")
+        for{
+                n, err := a.Write([]byte("test"))
+                if err != nil {
+                        log.Fatal(n)
+                }
+                m, err := b.Write([]byte("test"))
+                if err != nil {
+                        log.Fatal(m)
+                }
+                l, err := c.Write([]byte("test"))
+                if err != nil {
+                        log.Fatal(l)
+                }
+        }
+}
+
+func handleRequest(conn net.Conn) {
+        log.Println("Accepted new connection.")
+        for{
+                buf := make([]byte, 1024)
+                size, err := conn.Read(buf)
+                if err != nil {
+                        return
+                }
+                data := buf[:size]
+                log.Println("Read new data from connection", data)
+                conn.Write(data)
+
+        }
+}
+func main() {
+        //gpio pin setting
+        pinset()
+        //serial Rs-485 setting
+        /*a, err := serial.OpenPort(rs485a)
+        if err != nil{
+                log.Fatal(err)
+        }
+        b, err := serial.OpenPort(rs485b)
+        if err != nil{
+                log.Fatal(err)
+        }
+        c, err := serial.OpenPort(rs485c)
+        if err != nil{
+                log.Fatal(err)
+        }*/
+        //Ethernet TCP setting
+        port := flag.Int("port", 3322, "Port to accept connections on.")
+        flag.Parse()
+
+        l, err := net.Listen("tcp",":"+strconv.Itoa(*port))
+        if err != nil {
+                log.Panicln(err)
+        }
+        log.Println("Listening to connections at on port", strconv.Itoa(*port))
+        fmt.Println(l)
+        //Board Test
+                //Ethernet TCP
+        for{
+                fmt.Println("ee")
+                conn, err := l.Accept()
+                if err != nil {
+                        log.Panicln(err)
+                }
+                //Led start
+                go LedToggle()
+                //Rs485 start
+                go Rs485()
+                go handleRequest(conn)
+        }
+}
